--- a/DentalMedical/MainWindow.xaml
+++ b/DentalMedical/MainWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalMedical"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="458" Width="334">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="160*"/>
+            <RowDefinition Height="261*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="20,135,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Height="22"/>
+        <TextBox x:Name="TextBoxSearchCriteria" HorizontalAlignment="Left" Height="25" Margin="10,105,0,0" TextWrapping="Wrap" Text="Kennett" VerticalAlignment="Top" Width="95"/>
+        <Label x:Name="LabelSearchNotification" Content="" HorizontalAlignment="Left" Height="25" Margin="50,0,0,0" VerticalAlignment="Top" Width="45" Grid.Row="1"/>
+        <ListBox x:Name="listBox1" Margin="10,164,76,26" Grid.Row="1"/>
+        <Button x:Name="BtnOpenSelected" Content="Open" Height="20" Margin="0,196,15,0" Grid.Row="1" VerticalAlignment="Top" Click="BtnOpenSelected_Click" HorizontalAlignment="Right" Width="56"/>
+        <ListBox x:Name="listBoxCBPSheets" Margin="10,10,156,0" Height="110" VerticalAlignment="Top" Grid.Row="1"/>
+        <TextBox x:Name="TextBoxSheetNum" HorizontalAlignment="Left" Height="25" Margin="20,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" Text="1"/>
+        <Label Content="Sheet #" HorizontalAlignment="Left" Height="25" Margin="20,30,0,0" VerticalAlignment="Top" Width="65"/>
+        <Label x:Name="LabelCBPInfo" Content="Label" HorizontalAlignment="Left" Height="30" Margin="20,10,0,0" VerticalAlignment="Top" Width="291"/>
+
     </Grid>
 </Window>
