--- a/DentalMedical/MainWindow.xaml
+++ b/DentalMedical/MainWindow.xaml
@@ -5,11 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DentalMedical"
         mc:Ignorable="d"
-        Title="MainWindow" Height="383" Width="354" Closing="App_Close">
-    <Grid Height="373" VerticalAlignment="Top" Margin="0,0,0,-17">
+        Title="MainWindow" Height="363.402" Width="588.6" Closing="App_Close">
+    <Grid Height="353" VerticalAlignment="Top" Margin="0,0,-8,0" RenderTransformOrigin="0.5,0.5">
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="-0.13"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="110*"/>
-            <ColumnDefinition Width="63*"/>
+            <ColumnDefinition Width="345*"/>
+            <ColumnDefinition Width="244*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="65*"/>
@@ -18,14 +26,14 @@
         <Button Content="Search" HorizontalAlignment="Left" Margin="20,90,0,0" Width="75" Click="Button_Click" Height="25" VerticalAlignment="Top"/>
         <TextBox x:Name="TextBoxSearchCriteria" HorizontalAlignment="Left" Height="25" Margin="100,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="95" Text="Diablo" TabIndex="1"/>
         <Label x:Name="LabelSearchNotification" Content="" HorizontalAlignment="Left" Height="25" Margin="115,90,0,0" VerticalAlignment="Top" Width="45"/>
-        <ListBox x:Name="listBoxSearchResults" Margin="20,246,21,10" ScrollViewer.HorizontalScrollBarVisibility="Visible"  Grid.ColumnSpan="2"
+        <ListBox x:Name="listBoxSearchResults" Margin="10,246,10,10" ScrollViewer.HorizontalScrollBarVisibility="Visible" Grid.ColumnSpan="2"
                  />
-        <Button x:Name="BtnOpenSelected" Content="Open" Height="20" Margin="0,0,144,110" VerticalAlignment="Bottom" Click="BtnOpenSelected_Click" HorizontalAlignment="Right" Width="56"/>
+        <Button x:Name="BtnOpenSelected" Content="Open" Height="20" Margin="8,0,0,92" VerticalAlignment="Bottom" Click="BtnOpenSelected_Click" HorizontalAlignment="Left" Width="56"/>
         <TextBox x:Name="TextBoxPassword" HorizontalAlignment="Left" Height="25" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" Text="DIAB1" TabIndex="2"/>
         <Label Content="Password" HorizontalAlignment="Left" Height="25" Margin="20,45,0,0" VerticalAlignment="Top" Width="65"/>
         <Label Content="Campaign" HorizontalAlignment="Left" Height="25" Margin="20,8,0,0" VerticalAlignment="Top" Width="75"/>
-        <ListBox x:Name="listBoxTables" HorizontalAlignment="Left" Height="107" Margin="11,10,0,0" VerticalAlignment="Top" Width="105" SelectionChanged="listBoxSQLTables_SelectionChanged" Grid.Column="1"/>
-        <TextBlock x:Name="TextBlockCampaignInfo" HorizontalAlignment="Left" Height="85" Margin="20,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.ColumnSpan="2"/>
+        <ListBox x:Name="listBoxTables" HorizontalAlignment="Right" Height="231" Margin="0,10,10,0" VerticalAlignment="Top" Width="105" SelectionChanged="listBoxSQLTables_SelectionChanged" Grid.Column="1"/>
+        <TextBlock x:Name="TextBlockCampaignInfo" HorizontalAlignment="Left" Height="85" Margin="10,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
 </Window>
